p2/website-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: website-a
  labels:
    app: website-a
spec:
  containers:
    - name: custom-website
      image: nginx
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: website-a-service
spec:
  type: NodePort
  selector:
    app: website-a
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
