p2/website-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: website-b
  labels:
    app: website-b
spec:
  containers:
    - name: custom-website
      image: bhargavshah86/kube-test:v0.1
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: website-b-service
spec:
  type: NodePort
  selector:
    app: website-b
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
