p2/website-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: website-c
  labels:
    app: website-c 
spec:
  containers:
    - name: custom-website
      image: karthequian/helloworld:latest
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: website-c-bis
  labels:
    app: website-c
spec:
  containers:
    - name: custom-website
      image: bhargavshah86/kube-test:v0.1
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: website-c-ter
  labels:
    app: website-c
spec:
  containers:
    - name: custom-website
      image: bhargavshah86/kube-test:v0.1
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: website-c-service
spec:
  type: NodePort
  selector:
    app: website-c
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30081
