p2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-a-ingress
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-a-service
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-b-service
            port:
              number: 80
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-c-service
            port:
              number: 80
